--- a/styles/phone.scss
+++ b/styles/phone.scss
@@ -1,19 +1,35 @@
 @media only screen and (max-width: 999em) {
+// Mixins
+@mixin buttonSetting{
+  height: 150px;
+  width: 10%;
+  background-color: blue;
+  position: absolute;
+  bottom: 0;
+  z-index: 999;
+}
+
 // All
 ::-webkit-scrollbar {
     display: none;
 }
-body{
+.siteWrapper{
+  overflow-x: hidden;
+}
+html, body{
   font-family: 'Questrial', sans-serif;
-  overflow-y: hidden;
+  // overflow: hidden;
+  // position: fixed;
   height: 100%
+}
+.ui-loader{
+  display: none;
 }
 // Navigation
 nav{
-  height: 25px;
+  height: 50px;
   width: 100%;
   background-color: black;
-  position: fixed;
   li{
     color: white;
     display: inline;
@@ -28,7 +44,7 @@ main {
 }
 #b2b{
   width: 10000px;
-  height: 250px;
+  height: 75%;
   position: relative;
   top: 25px;
   article{
@@ -49,22 +65,30 @@ main {
 #walker{
   background-color: #FDF4E1;
   position: absolute;
-  top: 250px;
+  top: 75%;
   bottom: 0;
   width: 100%;
-  article{
-    height: 20px;
-    width: 20px;
-    margin: auto;
-    background-color: red;
+  img{
+    width: 30%;
+    margin-left: 30%;
   }
+}
+#leftButton{
+  @include buttonSetting;
+  left: 0px;
+
+}
+#rightButton{
+  @include buttonSetting;
+  right: 0px;
+
 }
 // Footer
 footer{
-  height: 25px;
+  height: 20px;
   width: 100%;
   position: absolute;
-  bottom: 0px;
+  bottom: -20px;
   background-color: black;
 }
 
